# tap-mews

./: .env.example  .gitignore  README.md  meltano.yml  pyproject.toml
tap_mews/: __init__.py  client.py  streams.py  tap.py
