[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tap-mews"
version = "0.1.0"
description = "Singer tap for Mews PMS API, built with the Meltano Singer SDK."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["singer", "meltano", "tap", "mews", "pms"]
authors = [
    { name = "BBG" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "singer-sdk>=0.36.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
tap-mews = "tap_mews.tap:TapMews.cli"

[tool.hatch.build.targets.wheel]
packages = ["tap_mews"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
